fix for spacing on right side

--- a/src/styles/_page.scss
+++ b/src/styles/_page.scss
@@ -17,7 +17,7 @@ body {
   min-height: 100vh;
 
   @include breakpoint('840px') {
-    margin-left: 12.5rem;
+    margin-left: rem(240px);
     width: calc(100% - 240px);
   }
 }
